fixed the issue in the ElectionServiceTests class