@@ -9,8 +9,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.verify;
@@ -29,11 +31,30 @@ public class ElectionServiceTests {
     }
 
     @Test
-    public void testCreateVote() {
-        // Arrange
+    public void testCreatElection() {
+        Election.Candidate candidate1 = Election.Candidate
+                .builder()
+                .firstName("yassine")
+                .lastName("errakkas")
+                .numberOfVotes(0)
+                .build();
+
+        Election.Candidate candidate2 = Election.Candidate
+                .builder()
+                .firstName("ali")
+                .lastName("ahmad")
+                .numberOfVotes(0)
+                .build();
+
+        Election.Position position = Election.Position
+                .builder()
+                .label("President")
+                .candidates(List.of(candidate1,candidate2))
+                .build();
+
         CreateElectionRequest request = CreateElectionRequest.builder()
                 .title("Election 2024")
-                .positions(Arrays.asList())
+                .positions(List.of(position))
                 .creatorEmail("admin@example.com")
                 .expiringDate(new Date())
                 .build();
@@ -47,11 +68,9 @@ public class ElectionServiceTests {
 
         when(electionRepository.save(election)).thenReturn(election);
 
-        // Act
-        ElectionResponse response = electionService.createVote(request);
+        ElectionResponse response = electionService.createElection(request);
 
-        // Assert
-        assertEquals("vote created", response.getVoteMsg());
+        assertEquals("Election Created", response.getMessage());
         verify(electionRepository).save(election);
     }
 }
